WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51349
Page scroll popup menu "Scroll here" option not working when cliking above scroll slider/handler.
https://bugs.webkit.org/show_bug.cgi?id=51349
Summary
Page scroll popup menu "Scroll here" option not working when cliking above sc...
Demian Odasso
Reported
2010-12-20 12:55:43 PST
Created
attachment 77030
[details]
zip with a single project to reproduce this issue and a print screen of step 5. Steps to Reproduce: 1. Have a web page loaded into a qwebkit component, the web page must be long enougth so vertical scroll bar is shown. 2. Position the scroll at the bottom. 3. Now right click the scroll bar above the scroll slider/handler. 4. A popup menu will be shown. 5. Select "Scroll here" option. Actual Results: Notice that there is no action, the scroll bar doesnt get updated and the page doesnt scroll too. Expected Results: The scroll bar gets updated and the page scrolls too. Build 2010-12-20 on Windows XP SP3, Qt 4.7.1, VS Professional 2008. Attached a zip with a single project to reproduce this issue and a print screen of step 5. Regards.
Attachments
zip with a single project to reproduce this issue and a print screen of step 5.
(64.68 KB, application/x-zip-compressed)
2010-12-20 12:55 PST
,
Demian Odasso
no flags
Details
Patch for context sensitive menu option
(2.15 KB, patch)
2011-01-25 19:33 PST
,
Aparna Nandyal
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Aparna Nandyal
Comment 1
2011-01-25 19:33:41 PST
Created
attachment 80161
[details]
Patch for context sensitive menu option Context sensitive menu was not working as desired since m_PressedPos was not getting set properly in this scenario when moveThumb is used. In all other scenarios where moveThumb is used m_PressedPos is being set.
Aparna Nandyal
Comment 2
2011-01-25 20:49:40 PST
Additional information about the bug: 1. The scroll bar context sensitive menu option "Scroll here" does not work as expected even when he thumb of he scrollbar is not at the end. It scrolls to any position. 2. Tested that this bug is reproducible with sample QWebView code, arora brower and QtTestBrowser and patch was tested on sample code, arora browser and QtTestBrowser
Andreas Kling
Comment 3
2011-01-28 06:53:06 PST
Comment on
attachment 80161
[details]
Patch for context sensitive menu option r=me
WebKit Commit Bot
Comment 4
2011-01-28 08:33:10 PST
Comment on
attachment 80161
[details]
Patch for context sensitive menu option Clearing flags on attachment: 80161 Committed
r76946
: <
http://trac.webkit.org/changeset/76946
>
WebKit Commit Bot
Comment 5
2011-01-28 08:33:14 PST
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 6
2011-01-28 09:23:11 PST
http://trac.webkit.org/changeset/76946
might have broken Leopard Intel Release (Tests)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug